--- a/SystemUI/res/values-ru/strings.xml
+++ b/SystemUI/res/values-ru/strings.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="config_statusBarComponent">com.android.systemui.statusbar.phone.PhoneStatusBar</string>
-    <string name="status_bar_date_formatter">"%1$s
-%2$s"</string>
     <string name="app_label">Графический интерфейс системы</string>
     <string name="status_bar_clear_all_button">Очистить</string>
-    <string name="status_bar_recent_remove_item_title">Удаление из списка</string>
+    <string name="status_bar_recent_remove_item_title">Удалить из списка</string>
     <string name="status_bar_recent_inspect_item_title">О приложении</string>
-    <string name="status_bar_no_recent_apps">Нет последних приложений</string>
-    <string name="status_bar_accessibility_dismiss_recents">Закрыть последние приложения</string>
+    <string name="status_bar_no_recent_apps">Список недавно использованных приложений пуст.</string>
+    <string name="status_bar_accessibility_dismiss_recents">Закрыть недавние приложения</string>
     <string name="status_bar_no_notifications_title">Нет уведомлений</string>
     <string name="status_bar_ongoing_events_title">Текущие</string>
     <string name="status_bar_latest_events_title">Уведомления</string>
@@ -17,7 +14,7 @@
     <string name="battery_low_percent_format">Осталось %d%%</string>
     <string name="invalid_charger">"Зарядка через порт USB не поддерживается.
 Используйте только зарядное устройство из комплекта поставки."</string>
-    <string name="battery_low_why">Расход заряда батареи</string>
+    <string name="battery_low_why">Подробнее</string>
     <string name="status_bar_settings_settings_button">Настройки</string>
     <string name="status_bar_settings_wifi_button">Wi-Fi</string>
     <string name="status_bar_settings_airplane">Режим полета</string>
@@ -25,8 +22,6 @@
     <string name="status_bar_settings_mute_label">ВЫКЛ.</string>
     <string name="status_bar_settings_auto_brightness_label">АВТО</string>
     <string name="status_bar_settings_notifications">Уведомления</string>
-    <string name="status_bar_settings_battery_meter_format">%d%%</string>
-    <string name="status_bar_network_name_separator"> | </string>
     <string name="bluetooth_tethered">Общий модем доступен через Bluetooth</string>
     <string name="status_bar_input_method_settings_configure_input_methods">Настройка способов ввода</string>
     <string name="status_bar_use_physical_keyboard">Физическая клавиатура</string>
@@ -57,9 +52,9 @@
     <string name="use_ptp_button_title">Установить как камеру (PTP)</string>
     <string name="installer_cd_button_title">Установить приложение</string>
     <string name="accessibility_back">Назад</string>
-    <string name="accessibility_home">Главная страница</string>
+    <string name="accessibility_home">Домой</string>
     <string name="accessibility_menu">Меню</string>
-    <string name="accessibility_recent">Последние приложения</string>
+    <string name="accessibility_recent">Недавние приложения</string>
     <string name="accessibility_search_light">Поиск</string>
     <string name="accessibility_camera_button">Камера</string>
     <string name="accessibility_ime_switch_button">Кнопка переключения способа ввода.</string>
@@ -83,11 +78,11 @@
     <string name="accessibility_data_three_bars">Сигнал передачи данных: три деления.</string>
     <string name="accessibility_data_signal_full">Надежный сигнал передачи данных.</string>
     <string name="accessibility_wifi_off">Wi-Fi выключен</string>
-    <string name="accessibility_no_wifi">Отсутствует подключение к Wi-Fi.</string>
-    <string name="accessibility_wifi_one_bar">Wi-Fi: одно деление.</string>
-    <string name="accessibility_wifi_two_bars">Wi-Fi: два деления.</string>
-    <string name="accessibility_wifi_three_bars">Wi-Fi: три деления.</string>
-    <string name="accessibility_wifi_signal_full">Надежный сигнал Wi-Fi.</string>
+    <string name="accessibility_no_wifi">Wi-Fi выключен</string>
+    <string name="accessibility_wifi_one_bar">Wi-Fi: одно деление</string>
+    <string name="accessibility_wifi_two_bars">Wi-Fi: два деления</string>
+    <string name="accessibility_wifi_three_bars">Wi-Fi: три деления</string>
+    <string name="accessibility_wifi_signal_full">Wi-Fi: надежный сигнал</string>
     <string name="accessibility_no_wimax">Нет сигнала WiMAX.</string>
     <string name="accessibility_wimax_one_bar">Сигнал WiMAX: одно деление.</string>
     <string name="accessibility_wimax_two_bars">Сигнал WiMAX: два деления.</string>
@@ -104,9 +99,12 @@
     <string name="accessibility_desc_off">Выкл.</string>
     <string name="accessibility_desc_connected">Подключено</string>
     <string name="accessibility_data_connection_gprs">GPRS</string>
+    <string name="accessibility_data_connection_1x">1 X</string>
+    <string name="accessibility_data_connection_hspa">HSPA</string>
     <string name="accessibility_data_connection_3g">3G</string>
     <string name="accessibility_data_connection_3.5g">3,5G</string>
     <string name="accessibility_data_connection_4g">4G</string>
+    <string name="accessibility_data_connection_lte">LTE</string>
     <string name="accessibility_data_connection_cdma">CDMA</string>
     <string name="accessibility_data_connection_roaming">Роуминг</string>
     <string name="accessibility_data_connection_edge">Edge</string>
@@ -114,7 +112,7 @@
     <string name="accessibility_no_sim">SIM-карта отсутствует.</string>
     <string name="accessibility_bluetooth_tether">Bluetooth-модем</string>
     <string name="accessibility_airplane_mode">Режим полета.</string>
-    <string name="accessibility_battery_level">Батарея: %d процент/а/ов.</string>
+    <string name="accessibility_battery_level">Уровень заряда %d.</string>
     <string name="accessibility_settings_button">Настройки</string>
     <string name="accessibility_notifications_button">Уведомления</string>
     <string name="accessibility_remove_notification">Удалить уведомление</string>
@@ -144,7 +142,7 @@
 
 При восстановлении подключения оператор может взимать плату за передачу данных."</string>
     <string name="data_usage_disabled_dialog_enable">Восстановить подключение</string>
-    <string name="status_bar_settings_signal_meter_disconnected">Нет подключения к Интернету</string>
+    <string name="status_bar_settings_signal_meter_disconnected">Нет интернет-подключения</string>
     <string name="status_bar_settings_signal_meter_wifi_nossid">Wi-Fi подключено</string>
     <string name="gps_notification_searching_text">Поиск GPS</string>
     <string name="gps_notification_found_text">Координаты по GPS</string>
@@ -158,7 +156,7 @@
     <string name="start_dreams">Заставка</string>
     <string name="ethernet_label">Ethernet</string>
     <string name="quick_settings_airplane_mode_label">Режим полета</string>
-    <string name="quick_settings_battery_charging_label">%d%%</string>
+    <string name="quick_settings_battery_charging_label">Заряжается, %d %%</string>
     <string name="quick_settings_battery_charged_label">Заряжено</string>
     <string name="quick_settings_bluetooth_label">Bluetooth</string>
     <string name="quick_settings_bluetooth_multiple_devices_label">Bluetooth (%d)</string>
@@ -182,42 +180,43 @@
     <string name="quick_settings_remote_display_no_connection_label">Wi-Fi-монитор</string>
     <string name="quick_settings_brightness_dialog_title">Яркость</string>
     <string name="quick_settings_brightness_dialog_auto_brightness_label">АВТОНАСТРОЙКА</string>
-    <string name="zz_moto_accessibility_data_connection_4g_lte">4 G L T E</string>
-    <string name="zz_moto_accessibility_data_connection_lte">L T E</string>
-    <string name="zz_moto_accessibility_data_connection_3g_plus">3 G plus</string>
-    <string name="zz_moto_accessibility_data_connection_hplus">H plus</string>
-    <string name="zz_moto_accessibility_data_four_bars">Данные: четыре деления.</string>
-    <string name="zz_moto_accessibility_data_five_bars">Данные: пять делений.</string>
-    <string name="zz_moto_accessibility_data_six_bars">Данные: шесть делений.</string>
-    <string name="zz_moto_accessibility_phone_four_bars">Телефон: четыре деления.</string>
-    <string name="zz_moto_accessibility_phone_five_bars">Телефон: пять делений.</string>
-    <string name="zz_moto_accessibility_phone_six_bars">Телефон: шесть делений.</string>
-    <string name="zz_moto_accessibility_wimax_off">Wimax выключен.</string>
-    <string name="zz_moto_accessibility_wimax_dormant">Wimax неактивен.</string>
-    <string name="zz_moto_accessibility_wimax_scanning">Сканирование Wimax.</string>
-    <string name="zz_moto_accessibility_wimax_not_connected">Wimax не подключен.</string>
-    <string name="zz_moto_accessibility_wimax_no_bars">Wimax: нет сигнала.</string>
-    <string name="zz_moto_accessibility_wimax_one_bar">Сигнал Wimax: одно деление.</string>
-    <string name="zz_moto_accessibility_wimax_two_bars">Сигнал Wimax: два деления.</string>
-    <string name="zz_moto_accessibility_wimax_three_bars">Сигнал Wimax: три деления.</string>
-    <string name="zz_moto_accessibility_wimax_four_bars">Сигнал Wimax: четыре деления.</string>
-    <string name="zz_moto_accessibility_wimax_five_bars">Сигнал Wimax: пять делений.</string>
-    <string name="zz_moto_accessibility_wimax_full">Сигнал Wimax: максимальная мощность.</string>
-    <string name="zz_moto_accessibility_emergency_calls_only">Только экстренные вызовы.</string>
-    <string name="zz_moto_accessibility_roaming_no_service">Сеть не найдена.</string>
-    <string name="zz_moto_accessibility_roaming_off">Роуминг отключен.</string>
-    <string name="zz_moto_accessibility_roaming">Роуминг.</string>
-    <string name="zz_moto_accessibility_roaming_femtocell">Роуминг использует фемтосоту.</string>
-    <string name="zz_moto_accessibility_no_sim">Нет SIM-карты.</string>
-    <string name="zz_moto_accessibility_corrupt_sim">SIM-карта недопустимая или поврежденная.</string>
     <string name="ssl_ca_cert_warning">"Действия в сети
 могут отслеживаться"</string>
     <string name="status_bar_help_title">Уведомления появляются здесь</string>
-    <string name="status_bar_help_text">"Доступ к ним в любое время, проводя вниз.
+    <string name="status_bar_help_text">"Доступ к ним в любое время, проводя вниз. 
 Снова проведите пальцами вниз для управления системой."</string>
-    <string name="vibration_pattern_title">Шаблон вибрации</string>
-    <string name="quick_settings_wireless_display_label">Беспроводной монитор</string>
-    <string name="inductive_charging_hint">"Обнаружено беспроводное зарядное устройство.
-Совместите этот значок с индикатором
-на вашей зарядной панели"</string>
+    <string name="vibration_pattern_title">Вибрация</string>
+    <string name="zz_moto_accessibility_data_connection_4g_lte">4G LTE</string>
+    <string name="zz_moto_accessibility_data_connection_lte">LTE</string>
+    <string name="zz_moto_accessibility_data_connection_3g_plus">3G+</string>
+    <string name="zz_moto_accessibility_data_connection_2g">2G</string>
+    <string name="zz_moto_accessibility_data_connection_hplus">H+</string>
+    <string name="zz_moto_accessibility_data_four_bars">Сигнал передачи данных 4 деления.</string>
+    <string name="zz_moto_accessibility_data_five_bars">Сигнал передачи данных 5 делений.</string>
+    <string name="zz_moto_accessibility_data_six_bars">Сигнал передачи данных 6 делений.</string>
+    <string name="zz_moto_accessibility_phone_four_bars">Сигнал 4 деления.</string>
+    <string name="zz_moto_accessibility_phone_five_bars">Сигнал 5 делений.</string>
+    <string name="zz_moto_accessibility_phone_six_bars">Сигнал 6 делений.</string>
+    <string name="zz_moto_accessibility_wimax_off">Wimax выключен.</string>
+    <string name="zz_moto_accessibility_wimax_dormant">Wimax бездействует.</string>
+    <string name="zz_moto_accessibility_wimax_scanning">Wimax сканирование.</string>
+    <string name="zz_moto_accessibility_wimax_not_connected">Wimax не подключен.</string>
+    <string name="zz_moto_accessibility_wimax_no_bars">Wimax нет сигнала.</string>
+    <string name="zz_moto_accessibility_wimax_one_bar">Wimax сигнал 1 деление.</string>
+    <string name="zz_moto_accessibility_wimax_two_bars">Wimax сигнал 2 деления.</string>
+    <string name="zz_moto_accessibility_wimax_three_bars">Wimax сигнал 3 деления.</string>
+    <string name="zz_moto_accessibility_wimax_four_bars">Wimax сигнал 4 деления.</string>
+    <string name="zz_moto_accessibility_wimax_five_bars">Wimax сигнал 5 делений.</string>
+    <string name="zz_moto_accessibility_wimax_full">Wimax максимальный сигнал.</string>
+    <string name="zz_moto_accessibility_emergency_calls_only">Только экстренные вызовы.</string>
+    <string name="zz_moto_accessibility_roaming_no_service">Не обслуживается.</string>
+    <string name="zz_moto_accessibility_roaming_off">Без роуминга.</string>
+    <string name="zz_moto_accessibility_roaming">Роуминг.</string>
+    <string name="zz_moto_accessibility_roaming_femtocell">Roaming using femtocell.</string>
+    <string name="zz_moto_accessibility_no_sim">Нет SIM-карты.</string>
+    <string name="zz_moto_accessibility_corrupt_sim">SIM-карта недействительна или повреждена.</string>
+    <string name="quick_settings_wireless_display_label">Беспроводной проектор</string>
+    <string name="inductive_charging_hint">"Обнаружено беспроводное зарядное устройство. 
+Совместите этот значок с индикатором на 
+Ваш зарядной площадке."</string>
 </resources>
